<resources>
    <string name="app_name">My Music</string>
    <string name="category_library">LOG IN</string>
    <string name="category_playlists">Playlists</string>
    <string name="category_artists">Artists</string>
    <string name="category_albums">Albums</string>
    <string name="category_songs">Favorite</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="favorite_description">In this Activity, A ListView will be used to display all favorite songs. Each item includes one imageView on the left,one playing icon which will navigate to playing screen when clicked, and one buy icon on the right side. When buy icon clicked will navigate to payment activity.</string>
    <string name="buy">BUY</string>
    <string name="playlists_description">There are a search bar at the top of this screen, which can be used to search songs in the server and can be added to this page, and a listView with different category, like Classical Music, Pop Music, Top 100, Purchased and so on. Each category can be clicked and open another page with song items. \nEach song item has a song image, a buy icon and playing icon </string>
    <string name="favorite_songs_screen">Favorite songs screen</string>
    <string name="playlists_screen">Playlists screen</string>
    <string name="playing_screen">Playing screen</string>
    <string name="playing_description">in this activity, we are going to use the ContentResolver class to retrieve tracks on the device, the MediaPlayer class to play audio and the MediaController class to control playback.</string>
    <string name="sign_in_description">In this activity, we integrating google sign in into this app. \nstep1: Get a configuration file  \nstep2:Add the configuration file to your projectstep \n3:Add the Google Services plugin and Add Google Play services  \nstep4: Get your backend server\'s OAuth 2.0 client ID  \nstep5:Configure Google Sign-In and the GoogleApiClient object  \nstep6:Add the Google Sign-In button to your app  \nstep7:Start the sign-in flow</string>
    <string name="payment_screen">Payment Screen</string>
    <string name="pay_description">In this payment activity, we will install Stripe Android library (compile \'com.stripe:stripe-android:4.1.5\') and use stripe api to implement payment activity</string>
    <string name="mian_description">This is the main screen with three categories, each item can be clicked and navigate to related page</string>
    <string name="back">Back</string>
</resources>
